# SwiFT

./: pyproject.toml
src/swiftfmri/: main.py
