[project]
name = "swiftfmri"
version = "0.1.0"
description = "SwiFT: Swin 4D fMRI Transformer"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.8"
authors = [
    {name = "Peter Yongho Kim", email = "peterkim98@snu.ac.kr"},
    {name = "Junbeom Kwon", email = "kjb961013@gmail.com"},
]
keywords = ["fMRI", "transformer", "deep-learning", "neuroscience"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "pytorch-lightning>=1.9.0,<2.0.0",
    "torchmetrics>=0.11.0",
    "einops>=0.6.0",
    "monai>=1.2.0",
    "nibabel>=5.0.0",
    "nilearn>=0.10.0",
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "scipy>=1.7.0",
    "tqdm>=4.65.0",
    "pyyaml>=6.0",
    "neptune-client>=0.16,<1.0"
]

[project.optional-dependencies]

augmentation = [
    "torchio>=0.18.0",
]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
swift-train = "swiftfmri.main:cli_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/swiftfmri"]

[tool.ruff]
line-length = 120
target-version = "py39"
